...
}

private extension LoginState {
  var logOutButtonTitle: String {
    switch self {
    case .guest:
      "Exit"
    case .user:
      "Logout"
    }
  }
}


