...
    return tableView
  }()

  override func viewDidLoad() {
    super.viewDidLoad()

    title = "Posts"

    navigationItem.rightBarButtonItem = .init(
      title: viewModel.logOutButtonTitle,
      style: .done,
      target: self,
      action: #selector(logOut)
...

    switch logOutAction {
    case .goToLogin:
      dismiss(animated: true)
    case .thankForTrialing:
      let alert = UIAlertController(title: "Thank you for trialing this app", message: nil, preferredStyle: .alert)
      alert.addAction(.init(title: "OK", style: .default) { [unowned self] _ in
        self.dismiss(animated: true)
      })
      present(alert, animated: true)
    }
  }

...
